scrollbar fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,7 +11,7 @@ span{
 html{
 	font-size:100%;
     font-family: 'Roboto', sans-serif;
-	overflow-y:scroll;
+
 }
 html,body{
 	margin:0;
